tests/ui/coverage-attr/no-coverage.stderr
error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:9:1
   |
LL |   #[coverage(off)]
   |   ^^^^^^^^^^^^^^^^
LL | / trait Trait {
LL | |     #[coverage(off)]
LL | |     const X: u32;
...  |
LL | |     fn g();
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:50:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     let _ = ();
   |     ----------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:54:9
   |
LL |         #[coverage(off)]
   |         ^^^^^^^^^^^^^^^^
LL |         () => (),
   |         -------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:58:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     return ();
   |     --------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:11:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     const X: u32;
   |     ------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:14:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T;
   |     ------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:19:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     fn f(&self);
   |     ------------ not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:22:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     fn g();
   |     ------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:30:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T = Self;
   |     -------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:33:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type U = impl Trait;
   |     -------------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:41:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     static X: u32;
   |     -------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/no-coverage.rs:44:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T;
   |     ------- not a function or closure

error: unconstrained opaque type
  --> $DIR/no-coverage.rs:34:14
   |
LL |     type U = impl Trait;
   |              ^^^^^^^^^^
   |
   = note: `U` must be used in combination with a concrete type within the same impl

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0788`.
